Changed knot.js to process.js

--- a/tests/views/index.html
+++ b/tests/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Testing Knot</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script type="text/javascript" src="/knot/knot.js"></script>
+    <script type="text/javascript" src="/knot/process.js"></script>
   </head>
   <body>
     Testing Knot.
