--- a/examples/simple_example/views/index.html
+++ b/examples/simple_example/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Knot Node Test</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script type="text/javascript" src="/knot/knot.js"></script>
+    <script type="text/javascript" src="/knot/process.js"></script>
   </head>
   <body>
     It's Knot Node.
